# langchain-fastapi-boilerplate

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/config/: base.py  settings.py
app/migrations/: 001_create_embeddings_table.sql
app/models/: embedding.py
app/routers/: embedding.py
app/schemas/: embedding.py
app/scripts/: dev.py  migrate.py
app/services/: embedding.py
app/store/: database.py
app/utils/: pdf_extractor.py  text_splitter.py
configs/: .env.local.example
